# LLVMPractice

./: .clang-format  CMakeLists.txt  LICENSE  README.md
IRGen/: CMakeLists.txt  cont.hh  gen.cc  gen.hh  llvmbase.hh  main.cc  run.hh
Lang/: CMakeLists.txt  main.cc
Lang/ast/: ast.cc  ast.hh  astdef.hh
Lang/driver/: driver.cc  driver.hh
Lang/grammar/: parser.y  scanner.l
Lang/std/: std.cc  stddefs.hh
Lang/test/: arr.gl  fact.gl  fdecl.gl  graph.gl  hello.g  hello.gl  if.gl  paramarr.gl  var.gl  wh.gl
Life/: CMakeLists.txt  graph.cc  graph.h  graph.hh  life.c  life.cc  life.h  life.hh  main.c  main.cc
Life/IR/: main.ll  mainO2.ll  mainO2_no_static.ll  main_no_static.ll
cmake/: comp_flags.cmake
